Prevent visible changes before/after hover on Firefox
Caused by different rendering pipelines used in response to presence of transform

--- a/src/styles/card.scss
+++ b/src/styles/card.scss
@@ -37,6 +37,7 @@ $card-height: px-to-em(516);
 
 .card {
   position: relative;
+  transform: rotateX(var(--rot-x)) rotateY(var(--rot-y));
   filter: saturate(1.1);
   transition:
     1s transform,
@@ -54,11 +55,10 @@ $card-height: px-to-em(516);
   --x: 1px;
   --y: 1px;
   --o: 0.01;
-  --rot-x: 0deg;
-  --rot-y: 0deg;
+  --rot-x: 0.1deg;
+  --rot-y: 0.1deg;
 
   &.mouseover {
-    transform: rotateX(var(--rot-x)) rotateY(var(--rot-y));
     transition: none;
     box-shadow: calc(var(--x) * 0.05) calc(var(--y) * 0.05) 1em rgba(#000, 0.33);
 
